--- a/gitops/apps/home-assistant/helpers-input-datetime-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-datetime-configmap.yaml
@@ -1,6 +1,10 @@
 apiVersion: v1
 data:
   bathroom.yaml: |
+    # Template for input_datetime helpers per room
+    # Usage:
+    #   jinja2 input_datetime_template.yaml.j2 -D room=bedroom > input_datetime/bedroom.yaml
+
     bathroom_s1_start:
       name: Bathroom Morning start
       has_time: true
@@ -14,6 +18,10 @@ data:
       name: Bathroom Night start
       has_time: true
   bedroom.yaml: |
+    # Template for input_datetime helpers per room
+    # Usage:
+    #   jinja2 input_datetime_template.yaml.j2 -D room=bedroom > input_datetime/bedroom.yaml
+
     bedroom_s1_start:
       name: Bedroom Morning start
       has_time: true
@@ -27,6 +35,10 @@ data:
       name: Bedroom Night start
       has_time: true
   hallway.yaml: |
+    # Template for input_datetime helpers per room
+    # Usage:
+    #   jinja2 input_datetime_template.yaml.j2 -D room=bedroom > input_datetime/bedroom.yaml
+
     hallway_s1_start:
       name: Hallway Morning start
       has_time: true
@@ -40,6 +52,10 @@ data:
       name: Hallway Night start
       has_time: true
   kitchen.yaml: |
+    # Template for input_datetime helpers per room
+    # Usage:
+    #   jinja2 input_datetime_template.yaml.j2 -D room=bedroom > input_datetime/bedroom.yaml
+
     kitchen_s1_start:
       name: Kitchen Morning start
       has_time: true
@@ -53,6 +69,10 @@ data:
       name: Kitchen Night start
       has_time: true
   living_room.yaml: |
+    # Template for input_datetime helpers per room
+    # Usage:
+    #   jinja2 input_datetime_template.yaml.j2 -D room=bedroom > input_datetime/bedroom.yaml
+
     living_room_s1_start:
       name: Living Room Morning start
       has_time: true
