--- a/gitops/apps/home-assistant/helpers-input-boolean-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-boolean-configmap.yaml
@@ -1,130 +1,150 @@
 apiVersion: v1
 data:
   bathroom.yaml: |
+    # Template for input_boolean helpers per room
+    # Usage:
+    #   jinja2 input_boolean_template.yaml.j2 -D room=bedroom > input_boolean/bedroom.yaml
+
     bathroom_custom_schedule:
-      name: Bathroom – Use custom schedule
+      name: Bathroom - Use custom schedule
     bathroom_motion_enabled:
-      name: Bathroom – Motion Control Enabled
+      name: Bathroom - Motion Control Enabled
     bathroom_timer_enabled:
-      name: Bathroom – Timer Control Enabled
+      name: Bathroom - Timer Control Enabled
 
     enable_bathroom_morning:
-      name: Bathroom – Timer Morning Enabled
+      name: Bathroom - Timer Morning Enabled
     enable_bathroom_day:
-      name: Bathroom – Timer Day Enabled
+      name: Bathroom - Timer Day Enabled
     enable_bathroom_evening:
-      name: Bathroom – Timer Evening Enabled
+      name: Bathroom - Timer Evening Enabled
     enable_bathroom_night:
-      name: Bathroom – Timer Night Enabled
+      name: Bathroom - Timer Night Enabled
 
     auto_on_bathroom_morning:
-      name: Bathroom – Timer Morning Auto-on
+      name: Bathroom - Timer Morning Auto-on
     auto_on_bathroom_day:
-      name: Bathroom – Timer Day Auto-on
+      name: Bathroom - Timer Day Auto-on
     auto_on_bathroom_evening:
-      name: Bathroom – Timer Evening Auto-on
+      name: Bathroom - Timer Evening Auto-on
     auto_on_bathroom_night:
-      name: Bathroom – Timer Night Auto-on
+      name: Bathroom - Timer Night Auto-on
   bedroom.yaml: |
+    # Template for input_boolean helpers per room
+    # Usage:
+    #   jinja2 input_boolean_template.yaml.j2 -D room=bedroom > input_boolean/bedroom.yaml
+
     bedroom_custom_schedule:
-      name: Bedroom – Use custom schedule
+      name: Bedroom - Use custom schedule
     bedroom_motion_enabled:
-      name: Bedroom – Motion Control Enabled
+      name: Bedroom - Motion Control Enabled
     bedroom_timer_enabled:
-      name: Bedroom – Timer Control Enabled
+      name: Bedroom - Timer Control Enabled
 
     enable_bedroom_morning:
-      name: Bedroom – Timer Morning Enabled
+      name: Bedroom - Timer Morning Enabled
     enable_bedroom_day:
-      name: Bedroom – Timer Day Enabled
+      name: Bedroom - Timer Day Enabled
     enable_bedroom_evening:
-      name: Bedroom – Timer Evening Enabled
+      name: Bedroom - Timer Evening Enabled
     enable_bedroom_night:
-      name: Bedroom – Timer Night Enabled
+      name: Bedroom - Timer Night Enabled
 
     auto_on_bedroom_morning:
-      name: Bedroom – Timer Morning Auto-on
+      name: Bedroom - Timer Morning Auto-on
     auto_on_bedroom_day:
-      name: Bedroom – Timer Day Auto-on
+      name: Bedroom - Timer Day Auto-on
     auto_on_bedroom_evening:
-      name: Bedroom – Timer Evening Auto-on
+      name: Bedroom - Timer Evening Auto-on
     auto_on_bedroom_night:
-      name: Bedroom – Timer Night Auto-on
+      name: Bedroom - Timer Night Auto-on
   hallway.yaml: |
+    # Template for input_boolean helpers per room
+    # Usage:
+    #   jinja2 input_boolean_template.yaml.j2 -D room=bedroom > input_boolean/bedroom.yaml
+
     hallway_custom_schedule:
-      name: Hallway – Use custom schedule
+      name: Hallway - Use custom schedule
     hallway_motion_enabled:
-      name: Hallway – Motion Control Enabled
+      name: Hallway - Motion Control Enabled
     hallway_timer_enabled:
-      name: Hallway – Timer Control Enabled
+      name: Hallway - Timer Control Enabled
 
     enable_hallway_morning:
-      name: Hallway – Timer Morning Enabled
+      name: Hallway - Timer Morning Enabled
     enable_hallway_day:
-      name: Hallway – Timer Day Enabled
+      name: Hallway - Timer Day Enabled
     enable_hallway_evening:
-      name: Hallway – Timer Evening Enabled
+      name: Hallway - Timer Evening Enabled
     enable_hallway_night:
-      name: Hallway – Timer Night Enabled
+      name: Hallway - Timer Night Enabled
 
     auto_on_hallway_morning:
-      name: Hallway – Timer Morning Auto-on
+      name: Hallway - Timer Morning Auto-on
     auto_on_hallway_day:
-      name: Hallway – Timer Day Auto-on
+      name: Hallway - Timer Day Auto-on
     auto_on_hallway_evening:
-      name: Hallway – Timer Evening Auto-on
+      name: Hallway - Timer Evening Auto-on
     auto_on_hallway_night:
-      name: Hallway – Timer Night Auto-on
+      name: Hallway - Timer Night Auto-on
   kitchen.yaml: |
+    # Template for input_boolean helpers per room
+    # Usage:
+    #   jinja2 input_boolean_template.yaml.j2 -D room=bedroom > input_boolean/bedroom.yaml
+
     kitchen_custom_schedule:
-      name: Kitchen – Use custom schedule
+      name: Kitchen - Use custom schedule
     kitchen_motion_enabled:
-      name: Kitchen – Motion Control Enabled
+      name: Kitchen - Motion Control Enabled
     kitchen_timer_enabled:
-      name: Kitchen – Timer Control Enabled
+      name: Kitchen - Timer Control Enabled
 
     enable_kitchen_morning:
-      name: Kitchen – Timer Morning Enabled
+      name: Kitchen - Timer Morning Enabled
     enable_kitchen_day:
-      name: Kitchen – Timer Day Enabled
+      name: Kitchen - Timer Day Enabled
     enable_kitchen_evening:
-      name: Kitchen – Timer Evening Enabled
+      name: Kitchen - Timer Evening Enabled
     enable_kitchen_night:
-      name: Kitchen – Timer Night Enabled
+      name: Kitchen - Timer Night Enabled
 
     auto_on_kitchen_morning:
-      name: Kitchen – Timer Morning Auto-on
+      name: Kitchen - Timer Morning Auto-on
     auto_on_kitchen_day:
-      name: Kitchen – Timer Day Auto-on
+      name: Kitchen - Timer Day Auto-on
     auto_on_kitchen_evening:
-      name: Kitchen – Timer Evening Auto-on
+      name: Kitchen - Timer Evening Auto-on
     auto_on_kitchen_night:
-      name: Kitchen – Timer Night Auto-on
+      name: Kitchen - Timer Night Auto-on
   living_room.yaml: |
+    # Template for input_boolean helpers per room
+    # Usage:
+    #   jinja2 input_boolean_template.yaml.j2 -D room=bedroom > input_boolean/bedroom.yaml
+
     living_room_custom_schedule:
-      name: Living Room – Use custom schedule
+      name: Living Room - Use custom schedule
     living_room_motion_enabled:
-      name: Living Room – Motion Control Enabled
+      name: Living Room - Motion Control Enabled
     living_room_timer_enabled:
-      name: Living Room – Timer Control Enabled
+      name: Living Room - Timer Control Enabled
 
     enable_living_room_morning:
-      name: Living Room – Timer Morning Enabled
+      name: Living Room - Timer Morning Enabled
     enable_living_room_day:
-      name: Living Room – Timer Day Enabled
+      name: Living Room - Timer Day Enabled
     enable_living_room_evening:
-      name: Living Room – Timer Evening Enabled
+      name: Living Room - Timer Evening Enabled
     enable_living_room_night:
-      name: Living Room – Timer Night Enabled
+      name: Living Room - Timer Night Enabled
 
     auto_on_living_room_morning:
-      name: Living Room – Timer Morning Auto-on
+      name: Living Room - Timer Morning Auto-on
     auto_on_living_room_day:
-      name: Living Room – Timer Day Auto-on
+      name: Living Room - Timer Day Auto-on
     auto_on_living_room_evening:
-      name: Living Room – Timer Evening Auto-on
+      name: Living Room - Timer Evening Auto-on
     auto_on_living_room_night:
-      name: Living Room – Timer Night Auto-on
+      name: Living Room - Timer Night Auto-on
 kind: ConfigMap
 metadata:
   name: homeassistant-helpers-input-boolean
