--- a/gitops/apps/home-assistant/helpers-input-number-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-number-configmap.yaml
@@ -1,6 +1,10 @@
 apiVersion: v1
 data:
   bathroom.yaml: |
+    # Template for input_number helpers per room
+    # Usage:
+    #   jinja2 input_number_template.yaml.j2 -D room=bedroom > input_number/bedroom.yaml
+
     bathroom_brightness_step_pct:
       name: Bathroom Brightness step (%)
       min: 1
@@ -23,6 +27,10 @@ data:
       unit_of_measurement: "%"
       initial: 100
   bedroom.yaml: |
+    # Template for input_number helpers per room
+    # Usage:
+    #   jinja2 input_number_template.yaml.j2 -D room=bedroom > input_number/bedroom.yaml
+
     bedroom_brightness_step_pct:
       name: Bedroom Brightness step (%)
       min: 1
@@ -45,6 +53,10 @@ data:
       unit_of_measurement: "%"
       initial: 100
   hallway.yaml: |
+    # Template for input_number helpers per room
+    # Usage:
+    #   jinja2 input_number_template.yaml.j2 -D room=bedroom > input_number/bedroom.yaml
+
     hallway_brightness_step_pct:
       name: Hallway Brightness step (%)
       min: 1
@@ -67,6 +79,10 @@ data:
       unit_of_measurement: "%"
       initial: 100
   kitchen.yaml: |
+    # Template for input_number helpers per room
+    # Usage:
+    #   jinja2 input_number_template.yaml.j2 -D room=bedroom > input_number/bedroom.yaml
+
     kitchen_brightness_step_pct:
       name: Kitchen Brightness step (%)
       min: 1
@@ -89,6 +105,10 @@ data:
       unit_of_measurement: "%"
       initial: 100
   living_room.yaml: |
+    # Template for input_number helpers per room
+    # Usage:
+    #   jinja2 input_number_template.yaml.j2 -D room=bedroom > input_number/bedroom.yaml
+
     living_room_brightness_step_pct:
       name: Living Room Brightness step (%)
       min: 1
