--- a/gitops/apps/home-assistant/scripts-configmap.yaml
+++ b/gitops/apps/home-assistant/scripts-configmap.yaml
@@ -89,33 +89,40 @@ data:
                   data:
                     name: "scheduled_light_on"
                     message: "Scene '{{ scene_to_activate }}' missing; no fallback light entity available"
-  room_toggle.yaml: "room_toggle:\n  alias: Room Toggle (smart)\n  mode: parallel\n
-    \ fields:\n    room_key:\n      description: Short name for the room (e.g., living_room)\n
-    \   target_lights:\n      description: Entity or group to control (entity_id,
-    list, or target)\n  sequence:\n    - variables:\n        _ids: >-\n          {%
-    set tl = target_lights | default('') %}\n          {% if tl is mapping and 'entity_id'
-    in tl %}\n            {{ tl.entity_id }}\n          {% else %}\n            {{
-    tl }}\n          {% endif %}\n        id_list: >-\n          {% if _ids is string
-    and _ids != '' %}\n            {{ [_ids] }}\n          {% elif _ids is sequence
-    and _ids is not string %}\n            {{ _ids | list }}\n          {% else %}\n
-    \           {{ [] }}\n          {% endif %}\n        \n        # Check group state
-    directly (for Hue groups that don't expand)\n        group_on: >-\n          {%
-    if id_list | length == 1 %}\n            {{ is_state(id_list[0], 'on') }}\n          {%
-    else %}\n            {{ false }}\n          {% endif %}\n        \n        # Check
-    member entities via expand (for normal groups)\n        expanded: \"{{ expand(id_list)
-    }}\"\n        members_on: \"{{ expanded | selectattr('state','eq','on') | list
-    | count > 0 }}\"\n        \n        # Check member entities via state_attr (for
-    Hue groups)\n        attr_members: >-\n          {% if id_list | length == 1 %}\n
-    \           {{ state_attr(id_list[0], 'entity_id') | default([]) }}\n          {%
+  room_toggle.yaml: "room_toggle:\n  alias: Room Toggle (smart with debug)\n  mode:
+    parallel\n  fields:\n    room_key:\n      description: Short name for the room
+    (e.g., living_room)\n    target_lights:\n      description: Entity or group to
+    control (entity_id, list, or target)\n  sequence:\n    - variables:\n        _ids:
+    >-\n          {% set tl = target_lights | default('') %}\n          {% if tl is
+    mapping and 'entity_id' in tl %}\n            {{ tl.entity_id }}\n          {%
+    else %}\n            {{ tl }}\n          {% endif %}\n        id_list: >-\n          {%
+    if _ids is string and _ids != '' %}\n            {{ [_ids] }}\n          {% elif
+    _ids is sequence and _ids is not string %}\n            {{ _ids | list }}\n          {%
+    else %}\n            {{ [] }}\n          {% endif %}\n        \n        # Check
+    group state directly (for Hue groups that don't expand)\n        group_on: >-\n
+    \         {% if id_list | length == 1 %}\n            {{ is_state(id_list[0],
+    'on') }}\n          {% else %}\n            {{ false }}\n          {% endif %}\n
+    \       \n        # Check member entities via expand (for normal groups)\n        expanded:
+    \"{{ expand(id_list) }}\"\n        members_on: \"{{ expanded | selectattr('state','eq','on')
+    | list | count > 0 }}\"\n        \n        # Check member entities via state_attr
+    (for Hue groups)\n        attr_members: >-\n          {% if id_list | length ==
+    1 %}\n            {{ state_attr(id_list[0], 'entity_id') | default([]) }}\n          {%
     else %}\n            {{ [] }}\n          {% endif %}\n        attr_members_on:
     \"{{ expand(attr_members) | selectattr('state','eq','on') | list | count > 0 }}\"\n
     \       \n        # Any method indicates lights are on\n        any_on: \"{{ group_on
-    or members_on or attr_members_on }}\"\n    - choose:\n        - conditions: \"{{
-    any_on }}\"\n          sequence:\n            - service: light.turn_off\n              target:\n
+    or members_on or attr_members_on }}\"\n    \n    # DEBUG: Log what we detected\n
+    \   - service: logbook.log\n      data:\n        name: \"room_toggle DEBUG\"\n
+    \       message: >-\n          id_list={{ id_list }}, group_on={{ group_on }},
+    \n          members_on={{ members_on }}, attr_members_on={{ attr_members_on }},
+    \n          any_on={{ any_on }}\n    \n    - choose:\n        - conditions: \"{{
+    any_on }}\"\n          sequence:\n            - service: logbook.log\n              data:\n
+    \               name: \"room_toggle\"\n                message: \"Turning OFF
+    {{ id_list }}\"\n            - service: light.turn_off\n              target:\n
     \               entity_id: \"{{ id_list }}\"\n      default:\n        - service:
-    script.scheduled_light_on\n          data:\n            room_key: \"{{ room_key
-    | default('') }}\"\n            fallback_lights: \"{{ id_list[0] if id_list|length>0
-    else '' }}\"\n"
+    logbook.log\n          data:\n            name: \"room_toggle\"\n            message:
+    \"Turning ON {{ room_key }} via scheduled_light_on\"\n        - service: script.scheduled_light_on\n
+    \         data:\n            room_key: \"{{ room_key | default('') }}\"\n            fallback_lights:
+    \"{{ id_list[0] if id_list|length>0 else '' }}\"\n"
 kind: ConfigMap
 metadata:
   name: homeassistant-scripts
