--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -12,7 +12,7 @@ data:
       input:
         room_key:
           name: Room Key
-          description: Short name used by scenes: scene.<room_key>_(morning|day|evening|night)
+          description: "Short name used by scenes: scene.<room_key>_(morning|day|evening|night)"
           selector: { text: {} }
 
         target_lights:
@@ -232,7 +232,7 @@ data:
       input:
         room_key:
           name: Room Key
-          description: Short name used by scenes: scene.<room_key>_(morning|day|evening|night)
+          description: "Short name used by scenes: scene.<room_key>_(morning|day|evening|night)"
           selector: { text: {} }
 
         target_lights:
@@ -646,7 +646,7 @@ data:
       input:
         room_key:
           name: Room Key
-          description: Short name used by scenes: scene.<room_key>_(morning|day|evening|night)
+          description: "Short name used by scenes: scene.<room_key>_(morning|day|evening|night)"
           selector: { text: {} }
 
         target_lights:
